<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/remindersFragment">

    <fragment
        android:id="@+id/remindersFragment"
        android:name="com.mertcansegmen.locationbasedreminder.ui.reminders.RemindersFragment"
        android:label="@string/reminders"
        tools:layout="@layout/fragment_reminders">
        <argument
            android:name="reminderWithNotePlacePlaceGroup"
            app:argType="com.mertcansegmen.locationbasedreminder.model.ReminderWithNotePlacePlaceGroup" />
        <action
            android:id="@+id/action_remindersFragment_to_addEditReminderFragment"
            app:destination="@id/addEditReminderFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/placesFragment"
        android:name="com.mertcansegmen.locationbasedreminder.ui.places.PlacesFragment"
        android:label="@string/places"
        tools:layout="@layout/fragment_places">
        <action
            android:id="@+id/action_placesFragment_to_addEditPlaceFragment"
            app:destination="@id/addEditPlaceFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/addEditPlaceFragment"
        android:name="com.mertcansegmen.locationbasedreminder.ui.addeditplace.AddEditPlaceFragment"
        android:label="@string/new_place"
        tools:layout="@layout/fragment_add_edit_place">
        <action
            android:id="@+id/action_addEditPlaceFragment_to_namePlaceDialog"
            app:destination="@id/namePlaceDialog" />
        <action
            android:id="@+id/action_addEditPlaceFragment_to_addEditReminderFragment"
            app:destination="@id/addEditReminderFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <dialog
        android:id="@+id/namePlaceDialog"
        android:name="com.mertcansegmen.locationbasedreminder.ui.addeditplace.NamePlaceDialog"
        android:label="dialog_name_place"
        tools:layout="@layout/dialog_name_place"></dialog>

    <fragment
        android:id="@+id/addEditReminderFragment"
        android:name="com.mertcansegmen.locationbasedreminder.ui.addeditreminder.AddEditReminderFragment"
        android:label="Add Reminder"
        tools:layout="@layout/fragment_add_edit_reminder">
        <action
            android:id="@+id/action_addEditReminderFragment_to_pickPlaceDialog"
            app:destination="@id/pickPlaceDialog" />

    </fragment>

    <dialog
        android:id="@+id/pickPlaceDialog"
        android:name="com.mertcansegmen.locationbasedreminder.ui.addeditreminder.PickPlaceDialog"
        android:label="dialog_pick_places"
        tools:layout="@layout/dialog_pick_place">
        <action
            android:id="@+id/action_pickPlaceDialog_to_addEditPlaceFragment"
            app:destination="@id/addEditPlaceFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </dialog>

</navigation>